--- a/WebHunt/WebHunt/Info.plist
+++ b/WebHunt/WebHunt/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 Burns5. All rights reserved.</string>
+	<string>Copyright © 2019 HeminWon. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string>WebHuntView</string>
 </dict>
